--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ rvm:
   - '2.7'
 
 before_script:
-  - chmod +x ./pages/script/cibuild
+  - chmod +x ./script/cibuild
 
-script: ./pages/script/cibuild
+script: ./script/cibuild
 
 branches:
   only:
