--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ cache:
 script:
   - git config --global user.name "${GH_USERNAME}"
   - git config --global user.email "${GH_EMAIL}"
+  - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
   - cd pages && yarn && GIT_USER="${GH_USERNAME}" yarn deploy
 
 
